test/corpus/basic.txt
================================================================================
Basic: no match context
================================================================================



--------------------------------------------------------------------------------

(source_file
  (matches))

================================================================================
Basic: empty match context
================================================================================

-

--------------------------------------------------------------------------------

(source_file
  (matches))

================================================================================
Basic: one match in the match context
================================================================================

tag: user.terminal
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
Basic: one and-match in the match context
================================================================================

and tag: user.terminal
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (match_modifier)
      (identifier)
      (implicit_string))))

================================================================================
Basic: one not-match in the match context
================================================================================

not tag: user.terminal
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (match_modifier)
      (identifier)
      (implicit_string))))

================================================================================
Basic: one and-not-match in the match context
================================================================================

and not tag: user.terminal
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (match_modifier)
      (match_modifier)
      (identifier)
      (implicit_string))))

================================================================================
Basic: empty match context and one command
================================================================================

air: "a"

--------------------------------------------------------------------------------

(source_file
  (matches)
  (declarations
    (command_declaration
      (rule
        (word))
      (block
        (expression_statement
          (string
            (string_content)))))))

================================================================================
Basic: empty match context and one command
================================================================================

command palette: key(cmd-shift-p)

--------------------------------------------------------------------------------

(source_file
  (matches)
  (declarations
    (command_declaration
      (rule
        (seq
          (word)
          (word)))
      (block
        (expression_statement
          (key_action
            (implicit_string)))))))

================================================================================
Basic: conemu
================================================================================

os: windows
app.exe: ConEmu64.exe

-

tag(): terminal
tag(): user.git

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))
    (match
      (identifier)
      (implicit_string)))
  (declarations
    (tag_import_declaration
      (tag_binding)
      (identifier))
    (tag_import_declaration
      (tag_binding)
      (identifier))))
