test/corpus/docstring.txt
================================================================================
File knausj_talon/talon_draft_window/draft_global.talon
================================================================================

### These are available globally (in command mode)
mode: command
-
^draft show:
    ### Do this toggle so we can have focus when saying 'draft show'
    user.draft_hide()
    user.draft_show()

^draft show <user.draft_window_position>:
    ### Do this toggle so we can have focus when saying 'draft show'
    user.draft_hide()
    user.draft_show()
    user.draft_named_move(draft_window_position)

--------------------------------------------------------------------------------

(source_file
  (context
    (docstring)
    (match
      (identifier)
      (implicit_string)))
  (command
    (rule
      (start_anchor)
      (seq
        (word)
        (word)))
    (block
      (docstring)
      (expression
        (action
          (identifier)
          (argument_list)))
      (expression
        (action
          (identifier)
          (argument_list)))))
  (command
    (rule
      (start_anchor)
      (seq
        (word)
        (word)
        (capture
          (identifier))))
    (block
      (docstring)
      (expression
        (action
          (identifier)
          (argument_list)))
      (expression
        (action
          (identifier)
          (argument_list)))
      (expression
        (action
          (identifier)
          (argument_list
            (variable
              (identifier))))))))
